modifying swagger output json
